<resources>
    <string name="app_name">eShopool</string>
    <string name="toobar_header"></string>
    <string name="nav_header_user_name">newbie</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_homepage">Homepage</string>
    <string name="menu_necessity">Necessities</string>
    <string name="menu_electronic">Electronics</string>
    <string name="menu_cosmetic">Cosmetics</string>
    <string name="menu_setting">Settings</string>
    <string name="menu_history">Purchase History</string>
    <string name="menu_send">Send</string>
    <string name="eshopool">eShopool</string>
    <string name="remember_me">Remember Me</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forget_pwd">Forgot Password?</string>
    <string name="creat_account">Create an account</string>
    <string name="cancel">Cancel</string>
    <string name="reset_password">Set or Change Your Password</string>
    <string name="send_code">Send</string>
    <string name="enter_code">Enter code</string>
    <string name="password_warning">Password must be 8-16 characters and contain both numbers and letters/special characters.</string>
    <string name="enter_sms_phone">Enter the verification code</string>
    <string name="phone_pwd_cannot_empty">The mobile phone number or password cannot be empty.</string>
    <string name="pwd_cannot_empty">The password cannot be empty.</string>
    <string name="password_length_incorrect">The length of password is incorrect</string>
    <string name="pwd_require_special_character">Password should contain at least one special character.</string>
    <string name="sms_code_incorrect">Your verification code is incorrect.</string>
    <string name="confirm_pwd_incorrect">Your confirm password is incorrect.</string>
    <string name="pwd_set_successfully">Your password has been set successfully!</string>
    <string name="please_enter_phone_number">Please enter your mobile number!</string>
    <string name="phone_digit_incorrect">Your mobile number digits are incorrect.</string>
    <string name="network_error">Network Error!\nTry again later!</string>
    <string name="please_enter_sms_code">Please enter your verification code.</string>
    <string name="select_a_photo">Select a photo</string>
    <string name="choose_label">Choose a label</string>
    <string name="title">Title</string>
    <string name="description">Description(optional)</string>
    <string name="price">Price</string>
    <string name="login_fail">Login failed!\n The mobile phone number or Password entered is incorrect. Please try again!</string>
    <string name="save">Save</string>
    <string name="select_from_album">Choose from Album</string>
    <string name="camera">Camera</string>
    <string name="HTTP_404">Requested HTML not found.</string>
    <string name="url_error">URL cannot be opened.</string>
    <string name="io_error">IO error.</string>
    <string name="cannot_open_pic">Cannot get the required picture.</string>
    <string name="price_is_invalid">Price should be larger than 0.01</string>
    <string name="publish_success">Successful publish!</string>
    <string name="amount">Amount</string>
    <string name="title_cannot_empty">Title cannot be empty</string>
    <string name="price_cannot_empty">Price cannot empty</string>
    <string name="amount_cannot_empty">Amount cannot be empty.</string>
    <string name="amount_is_invalid">Amount should larger than 1.</string>
    <string name="logout">Log Out</string>
    <string name="balance">Balance</string>
    <string name="general">General</string>
    <string name="account_security">Personal Information</string>
    <string name="change_head_img">Change Photo</string>
    <string name="change_password">Password</string>
    <string name="delete_account">Delete Account</string>
    <string name="change_wallet">Wallet</string>
    <string name="language">Language</string>
    <string name="delete_account_warning">Deleting your account is permanent and will remove all content including match results and profile settings. Are you sure you want to delete your account?</string>
    <string name="Continue">Continue</string>
    <string name="upload_success">Upload successfully!</string>
    <string name="logout_successfully">Log out successfully!</string>
    <string name="ok">OK</string>
    <string name="buy">Buy</string>
    <string name="sale_history">Sales History</string>
    <string name="menu_sales">Sales history</string>
    <string name="network_ip">192.168.0.243:8080</string>
    <string name="update_successfully">Update successfully!</string>
</resources>
