<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_homepage"
            android:icon="@mipmap/cart"
            android:title="@string/menu_homepage" />
        <item
            android:id="@+id/nav_necessity"
            android:icon="@mipmap/branch_daily"
            android:title="@string/menu_necessity" />
        <item
            android:id="@+id/nav_electronic"
            android:icon="@mipmap/branch_electronic_device"
            android:title="@string/menu_electronic" />
        <item
            android:id="@+id/nav_makeup"
            android:icon="@mipmap/branch_makeup"
            android:title="@string/menu_cosmetic" />
    </group>

    <item android:title="Info">
        <menu>
            <item
                android:id="@+id/nav_sales"
                android:icon="@mipmap/sale"
                android:title="@string/sale_history" />
            <item
                android:id="@+id/nav_history"
                android:icon="@mipmap/bill"
                android:title="@string/menu_history" />
            <item
                android:id="@+id/nav_setting"
                android:icon="@mipmap/settings"
                android:title="@string/menu_setting" />
        </menu>
    </item>

</menu>
