<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#F5F6F7"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include">

        <Button
            android:id="@+id/btn_change_img"
            style="@style/Widget.AppCompat.Button"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#FEFFFF"
            android:gravity="center_vertical|center_horizontal|left"
            android:onClick="changeProfile"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:drawableRight="@mipmap/right_click"
            android:stateListAnimator="@null"
            android:text="@string/change_head_img"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:typeface="sans" />

        <Button
            android:id="@+id/btn_change_wallet"
            style="@style/Widget.AppCompat.Button"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#FEFFFF"
            android:gravity="center_vertical|center_horizontal|left"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:drawableRight="@mipmap/right_click"
            android:stateListAnimator="@null"
            android:text="@string/change_wallet"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:typeface="sans" />

        <Button
            android:id="@+id/btn_set_pwd"
            style="@style/Widget.AppCompat.Button"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#FEFFFF"
            android:gravity="center_vertical|center_horizontal|left"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:drawableRight="@mipmap/right_click"
            android:stateListAnimator="@null"
            android:text="@string/change_password"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:typeface="sans" />

        <Button
            android:id="@+id/btn_set_addr"
            style="@style/Widget.AppCompat.Button"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#FEFFFF"
            android:gravity="center_vertical|center_horizontal|left"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:drawableRight="@mipmap/right_click"
            android:stateListAnimator="@null"
            android:text="Address"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:typeface="sans" />

        <Button
            android:id="@+id/btn_delete_id"
            style="@style/Widget.AppCompat.Button"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#FEFFFF"
            android:gravity="center_vertical|center_horizontal"
            android:onClick="deleteAccount"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:stateListAnimator="@null"
            android:text="@string/delete_account"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:typeface="sans" />

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="#FEFFFF"
            android:gravity="center_vertical|center_horizontal"
            android:paddingLeft="20dp"
            android:stateListAnimator="@null"
            android:text="@string/logout"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:typeface="sans" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>