<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5">

    <ImageView
        android:id="@+id/img_user"
        android:layout_width="160dp"
        android:layout_height="160dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.236"
        app:srcCompat="@mipmap/user" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="260dp"
        android:layout_height="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_user">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:background="@drawable/underline"
            android:gravity="center_vertical"
            android:text="+86"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_marginStart="60dp"
            android:background="@drawable/underline"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textAlignment="textStart" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="260dp"
        android:layout_height="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout">

        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="220dp"
            android:layout_height="match_parent"
            android:background="@drawable/underline"
            android:ems="10"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:hint="@string/password" />

        <ImageView
            android:id="@+id/btn_close"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="220dp"
            android:background="@drawable/underline"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/icon_eye" />
    </FrameLayout>

    <Switch
        android:id="@+id/re_me"
        android:layout_width="200dp"
        android:layout_height="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/remember_me"
        android:textColor="#323637"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout2"
        app:theme="@style/MySwitch"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/btn_round"
        android:onClick="login"
        android:stateListAnimator="@null"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="18sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/re_me" />

    <View
        android:id="@+id/divider"
        android:layout_width="1dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <Button
        android:id="@+id/btn_forgot"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:background="#F5F5F5"
        android:onClick="forget"
        android:stateListAnimator="@null"
        android:text="@string/forget_pwd"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/divider"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:background="#F5F5F5"
        android:onClick="signUp"
        android:stateListAnimator="@null"
        android:text="@string/creat_account"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toEndOf="@+id/divider"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

</androidx.constraintlayout.widget.ConstraintLayout>