<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5">

    <View
        android:id="@+id/divider3"
        android:layout_width="260dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <RelativeLayout
        android:id="@+id/include"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorPrimary"
        android:fitsSystemWindows="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/ib_title_back"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:drawableLeft="@mipmap/toolbar_left"
            android:onClick="cancel"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textSize="18sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif"
        android:text="@string/reset_password"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:background="@drawable/underline"
            android:gravity="center_vertical"
            android:text="+86"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/reg_phone"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_marginStart="60dp"
            android:background="@drawable/underline"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textAlignment="textStart" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout3"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout6">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:background="@drawable/underline"
            android:gravity="right|center_vertical"
            android:text="Password" />

        <EditText
            android:id="@+id/edt_set_pwd"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="80dp"
            android:background="@drawable/underline"
            android:ems="10"
            android:inputType="textPassword" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout4"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout3">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:background="@drawable/underline"
            android:gravity="right|center_vertical"
            android:text="Confirm" />

        <EditText
            android:id="@+id/edt_confirm"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="80dp"
            android:background="@drawable/underline"
            android:ems="10"
            android:inputType="textPassword" />
    </FrameLayout>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/password_warning"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout4" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/btn_round"
        android:onClick="login"
        android:stateListAnimator="@null"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="18sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout5" />

    <FrameLayout
        android:id="@+id/frameLayout5"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider3">

        <LinearLayout
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:text="@string/enter_sms_phone" />

            <EditText
                android:id="@+id/edt_image_code"
                android:layout_width="170dp"
                android:layout_height="30dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/frame"
                android:ems="10"
                android:inputType="textPersonName"
                android:textAlignment="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />
        </LinearLayout>

        <ImageView
            android:id="@+id/image_code"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginStart="180dp"
            android:background="@mipmap/open_eye"
            android:clickable="true"
            android:onClick="changeCode"
            app:layout_constraintEnd_toEndOf="@+id/textView5"
            app:layout_constraintStart_toEndOf="@+id/edt_image_code"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout6"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout">

        <EditText
            android:id="@+id/edt_register_code"
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="numberDecimal"
            android:hint="@string/enter_code"
            android:background="@drawable/underline"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/btn_register_send"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_marginStart="180dp"
            android:background="@drawable/btn_parcel"
            android:onClick="requestRegCode"
            android:text="@string/send_code"
            android:textAllCaps="false"
            android:textSize="14sp" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>